--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,10 +17,11 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-pdf": "^7.3.3",
     "react-proxy": "^1.1.8",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "react-hot-toast": "^2.4.1",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
