--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.3.3",
     "react-proxy": "^1.1.8",
-    "react-router-dom": "^6.15.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
