--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.146",
+    "@mui/material": "^5.14.11",
+    "@mui/styled-engine-sc": "^5.14.11",
+    "@mui/x-date-pickers": "^6.16.0",
     "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
@@ -25,6 +29,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.11",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/helper-wrap-function": "^7.22.20"
   }
 }
