--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rx_management",
   "version": "0.1.0",
   "proxy": "http://localhost:9090",
+  "homepage": "nsrxmgt",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -10,17 +11,20 @@
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.11",
+    "@mui/x-date-pickers": "^6.16.2",
     "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.3.3",
